--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -602,12 +602,17 @@ html.dark .button--secondary {
     padding: 1.5rem;
     border: 1px solid var(--color-border);
     width: 100%;
-    max-width: 24rem; /* max-w-sm */
     box-shadow: var(--color-shadow);
     border-radius: 0.375rem;
     background-color: var(--color-card-bg);
     transform: scale(0.95);
     transition: transform 0.25s ease, background-color 0.3s ease, border-color 0.3s ease;
+}
+.dialog-modal__content--sm {
+    max-width: 24rem; /* max-w-sm */
+}
+.dialog-modal__content--lg {
+    max-width: 32rem; /* max-w-lg */
 }
 .dialog-modal:not(.opacity-0) .dialog-modal__content {
     transform: scale(1);
