style: correct css import order for dual list box

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,4 @@
 @import "./css/elements/Button.css";
 @import "./css/elements/Card.css";
 @import "./css/elements/Form.css";
+@import "./components/common/DualListBox.css";
