--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,4 @@
 @import "./css/elements/Card.css";
 @import "./css/elements/Form.css";
 @import "./components/common/DualListBox.css";
+@import "./components/FolderTab.css";
