style(tabs): add indentation for projects inside folders

--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -27,6 +27,10 @@
     position: relative;
     flex-shrink: 0;
 }
+.tab--in-folder {
+    margin-left: -15px;
+    padding-left: 15px;
+}
 .tab--dragging {
     opacity: 0.5;
 }
