--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,4 @@
 @import "./css/elements/Form.css";
 @import "./components/common/DualListBox.css";
 @import "./components/FolderTab.css";
+@import "./components/common/ContextMenu.css";
