--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -36,22 +36,21 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-}
-.folder-content {
-    padding: 0;
-    margin-top: -3px; /* Overlap with bottom border */
-    border-left: 2px solid var(--folder-color);
     background-color: var(--color-card-bg-hover);
-    border-radius: 0 6px 6px 6px; /* Sharpen top-left corner */
+    border-left: 3px solid var(--folder-color);
+    border-radius: 6px;
+    padding-right: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-right: 0.5rem;
 }
-.folder-content > ul {
+.folder-group > ul {
     list-style: none;
     margin: 0;
-    padding: 0.25rem 0.5rem 0.25rem 0.75rem;
+    padding: 0 0 0 0.5rem;
     display: flex;
 }
 .tab--in-folder .tab__button {
-    background-color: var(--color-card-bg-hover);
+    background-color: transparent;
 }
 .tab--in-folder .tab__button:hover {
     background-color: var(--color-border);
