refactor(css): import settingsmodal styles

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,4 @@
 @import "./components/common/DualListBox.css";
 @import "./components/FolderTab.css";
 @import "./components/common/ContextMenu.css";
+@import "./components/SettingsModal.css";
